fix: Adicionar melhorias propostas pelo SonarLint